--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,10 @@
   ],
   "dependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#~1.1.4",
-    "paper-input": "PolymerElements/paper-input#^1.1.8"
+    "paper-input": "PolymerElements/paper-input#^1.1.8",
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.1.0",
+    "iron-icon": "PolymerElements/iron-icon#^1.0.7",
+    "iron-icons": "PolymerElements/iron-icons#^1.1.3",
+    "iron-input": "PolymerElements/iron-input#^1.0.8"
   }
 }
